fix bug image review, refactor code
